2003-03-06  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Epson-EPL-6100.xml, printer/Epson-EPL-6100L.xml,
	  printer/Epson-EPL-6100PS.xml, printer/Epson-AcuLaser_C8600.xml
	  printer/Epson-AcuLaser_C8600PS.xml, driver/epl6100.xml,
	  driver/alc8600.xml, driver/pxlmono.xml, driver/Postscript.xml,
	  driver/lj5gray.xml, driver/lj5mono.xml, driver/ljet4.xml,
	  opt/2.xml, opt/6.xml, opt/145.xml, opt/159.xml, opt/160.xml,
	  opt/eplXXXX-*.xml, pxlmono-GSResolution.xml: Added Epson laser
	  printers.
	
	* printer/312297.xml, printer/Epson-EPL-5800L.xml,
	  printer/Epson-EPL-5900L.xml, driver/epl5?00l.xml,
	  opt/epsonepl-Dpi.xml: Corrections and improvements on the web
	  page and option choice texts. Added support for Epson EPL-6100L.

2003-03-05  Tim Waugh  <twaugh@redhat.com>

	* driver/Postscript.xml: Add work-around for Canon GP405
          (https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=85553).

	* db/source/opt/Postscript-Resolution.xml: New option 'Printer
	  Default' for printers that balk at '/HWResolution'
	  (https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=85553).

	* opt/162.xml: New option 'Not capable' for printers that balk at
	  '/Duplex false'
	  (https://bugzilla.redhat.com/bugzilla/show_bug.cgi?id=82385).

2003-03-03  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/312297.xml, printer/Epson-EPL-5800L.xml,
	  printer/Epson-EPL-5900L.xml, driver/epl5?00l.xml,
	  opt/epsonepl-*.xml: Added drivers "elp5700l", "elp5800l", and
	  "elp5700l" for Epson laser winprinters, raised ratings of the
	  Epson EPL-5700L, EPL-5800L, and EPL-5900L from "Partially" to
	  "Mostly" or "Perfectly".

2003-03-01  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-OfficeJet_5110.xml, printer/HP-OfficeJet_5110xi.xml:
	  Added new HP OfficeJet 5100 series.

	* printer/HP-PhotoSmart_P100.xml, printer/131424.xml,
	  printer/259689.xml, printer/HP-PhotoSmart_P1218.xml,
	  printer/HP-PhotoSmart_P1115.xml,