@@ -1,0 +1,26 @@
+<driver id="driver/foo2zjs">
+    <name>foo2zjs</name>
+    <url>http://home.mn.rr.com/richardsons/foo2zjs/</url>
+    <execution>
+	<filter />
+	<prototype>foo2zjs-wrapper %A</prototype>
+    </execution>
+    <comments> <en>
+
+    This is a driver debveloped for the Minolta magicolor 2300 DL
+    network color laser printer.
+	
+    It is possible that this driver will also work for the HP LaserJet
+    1000 and other Zenographics-based printers, but the author cannot
+    test this.
+
+    </en> </comments>
+    <printers>
+	<printer>
+	    <id>printer/Minolta-magicolor_2300_DL</id>
+	</printer>
+	<printer>
+	    <id>printer/HP-LaserJet_1000</id>
+	</printer>
+    </printers>
+</driver>
