@@ -1,0 +1,41 @@
+<option type="enum" id="opt/foo2zjs-ColorMode">
+    <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+    <arg_longname> <en>Color Mode</en> </arg_longname>
+    <arg_shortname> <en>ColorMode</en> </arg_shortname>
+    <arg_execution>
+	<arg_order>110</arg_order>
+	<arg_spot>A</arg_spot>
+	<arg_required />
+	<arg_substitution />
+	<arg_proto>%s </arg_proto>
+    </arg_execution>
+    <constraints>
+	<constraint sense="true">
+	<driver>foo2zjs</driver>
+	<arg_defval>ev/foo2zjs-ColorMode-mono</arg_defval>
+	</constraint>
+    </constraints>
+    <enum_vals>
+	<enum_val id="ev/foo2zjs-ColorMode-mono">
+	    <ev_longname> <en>Monochrome</en> </ev_longname>
+		<!-- A multilingual <comments> block can appear here, too;
+		 it should be treated as documentation for the user. -->
+	    <ev_shortname> <en>Monochrome</en> </ev_shortname>
+	    <ev_driverval></ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-ColorMode-color">
+	    <ev_longname> <en>Color</en> </ev_longname>
+		<!-- A multilingual <comments> block can appear here, too;
+		 it should be treated as documentation for the user. -->
+	    <ev_shortname> <en>Color</en> </ev_shortname>
+	    <ev_driverval>-c</ev_driverval>
+	    <constraints>
+	        <constraint sense="false">
+	    	    <make>HP</make>
+	    	    <model>LaserJet 1000</model>
+	        </constraint>
+            </constraints>
+	</enum_val>
+    </enum_vals>
+</option>
