@@ -1,0 +1,62 @@
+<option type="enum" id="opt/foo2zjs-MediaType">
+    <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+    <arg_longname> <en>Media Type</en> </arg_longname>
+    <arg_shortname> <en>MediaType</en> </arg_shortname>
+    <arg_execution>
+	<arg_group>General</arg_group>
+	<arg_order>110</arg_order>
+	<arg_spot>A</arg_spot>
+	<arg_required />
+	<arg_substitution />
+	<arg_proto>-m%s </arg_proto>
+    </arg_execution>
+    <constraints>
+	<constraint sense="true">
+	<driver>foo2zjs</driver>
+	<arg_defval>ev/foo2zjs-MediaType-1</arg_defval>
+	</constraint>
+    </constraints>
+    <enum_vals>
+	<enum_val id="ev/foo2zjs-MediaType-1">
+	    <ev_longname> <en>Standard Paper</en> </ev_longname>
+	    <ev_shortname> <en>Standard</en> </ev_shortname>
+	    <ev_driverval>1</ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-MediaType-2">
+	    <ev_longname> <en>Transparency</en> </ev_longname>
+	    <ev_shortname> <en>Transparency</en> </ev_shortname>
+	    <ev_driverval>5</ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-MediaType-3">
+	    <ev_longname> <en>Glossy</en> </ev_longname>
+	    <ev_shortname> <en>Glossy</en> </ev_shortname>
+	    <ev_driverval>3</ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-MediaType-257">
+	    <ev_longname> <en>Envelope</en> </ev_longname>
+	    <ev_shortname> <en>Envelope</en> </ev_shortname>
+	    <ev_driverval>257</ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-MediaType-259">
+	    <ev_longname> <en>Letterhead</en> </ev_longname>
+	    <ev_shortname> <en>Letterhead</en> </ev_shortname>
+	    <ev_driverval>259</ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-MediaType-261">
+	    <ev_longname> <en>Thick Stock</en> </ev_longname>
+	    <ev_shortname> <en>ThickStock</en> </ev_shortname>
+	    <ev_driverval>261</ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-MediaType-262">
+	    <ev_longname> <en>Postcard</en> </ev_longname>
+	    <ev_shortname> <en>Postcard</en> </ev_shortname>
+	    <ev_driverval>262</ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-MediaType-263">
+	    <ev_longname> <en>Labels</en> </ev_longname>
+	    <ev_shortname> <en>Labels</en> </ev_shortname>
+	    <ev_driverval>263</ev_driverval>
+	</enum_val>
+    </enum_vals>
+</option>
