@@ -1,0 +1,52 @@
+<option type="enum" id="opt/foo2zjs-PageSize">
+    <!-- A multilingual <comments> block can appear here, too;
+       it should be treated as documentation for the user. -->
+    <arg_longname> <en>Page Size</en> </arg_longname>
+    <arg_shortname> <en>PageSize</en> </arg_shortname>
+    <arg_execution>
+	<arg_group>General</arg_group>
+	<arg_order>110</arg_order>
+	<arg_spot>A</arg_spot>
+	<arg_required />
+	<arg_substitution />
+	<arg_proto>-p%s </arg_proto>
+    </arg_execution>
+    <constraints>
+	<constraint sense="true">
+	<driver>foo2zjs</driver>
+	<arg_defval>ev/foo2zjs-PageSize-1</arg_defval>
+	</constraint>
+    </constraints>
+    <enum_vals>
+	<enum_val id="ev/foo2zjs-PageSize-1">
+	    <ev_longname> <en>Letter</en> </ev_longname>
+	    <ev_shortname> <en>Letter</en> </ev_shortname>
+	    <ev_driverval>1</ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-PageSize-5">
+	    <ev_longname> <en>Legal</en> </ev_longname>
+	    <ev_shortname> <en>Legal</en> </ev_shortname>
+	    <ev_driverval>5</ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-PageSize-7">
+	    <ev_longname> <en>Executive</en> </ev_longname>
+	    <ev_shortname> <en>Executive</en> </ev_shortname>
+	    <ev_driverval>7</ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-PageSize-9">
+	    <ev_longname> <en>A4</en> </ev_longname>
+	    <ev_shortname> <en>A4</en> </ev_shortname>
+	    <ev_driverval>9</ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-PageSize-11">
+	    <ev_longname> <en>A5</en> </ev_longname>
+	    <ev_shortname> <en>A5</en> </ev_shortname>
+	    <ev_driverval>11</ev_driverval>
+	</enum_val>
+	<enum_val id="ev/foo2zjs-PageSize-13">
+	    <ev_longname> <en>B5</en> </ev_longname>
+	    <ev_shortname> <en>B5</en> </ev_shortname>
+	    <ev_driverval>13</ev_driverval>
+	</enum_val>
+    </enum_vals>
+</option>
