@@ -22,14 +22,17 @@
   <!--no pjl--><!--No "text"?--></lang>
   <autodetect>
   <!--no known parport probe information--></autodetect>
-  <functionality>D</functionality>
-  <driver>pbmtozjs</driver>
+  <functionality>B</functionality>
+  <driver>foo2zjs</driver>
   <!--no "contrib_url"-->
   <comments>
     <en>
 
-    GDI printer, which does not understand any standard language. Works
-    with the &quot;pbmtozjs&quot; driver from Szalai Robert.&lt;p&gt;
+    Does not understand any standard language. Works with the
+    &quot;foo2zjs&quot; and &quot;pbmtozjs&quot; drivers. The
+    &quot;foo2zjs&quot; driver is derived from the
+    &quot;pbmtozjs&quot; driver and supports more paper sizes and
+    options.&lt;p&gt;
 
     PCL is only implemented in the Windows driver, to support DOS
     applications in the DOS box of Windows. The printer has only 1 MB
