@@ -1,0 +1,36 @@
+<printer id="printer/Minolta-magicolor_2300_DL">
+    <make>Minolta</make>
+    <model>magicolor 2300 DL</model>
+    <mechanism>
+	<laser/>
+	<color/>
+	<resolution>
+	    <dpi>
+		<x>2400</x>
+		<y>600</y>
+	    </dpi>
+	</resolution>
+	<consumables>
+	    <comments>
+		<en>4 cartridges, waste toner, something else</en>
+	    </comments>
+	    <!--one or more "partno" elements.-->
+	</consumables>
+    </mechanism>
+    <url>http://www.minolta-qms.com/products/color/mc2300DL/index.html</url>
+    <lang>
+	<proprietary/>
+	<!--no pjl--><!--No "text"?-->
+    </lang>
+    <autodetect>
+	<!--  HOW DO I SPECIFY SNMP AUTODETECT???????? -->
+    </autodetect>
+    <functionality>B</functionality>
+    <driver>foo2zjs</driver>
+    <unverified/><!--no "contrib_url"-->
+    <comments> <en>
+	The magicolor 2300 DL is a network color laser printer with a
+	2003 street price of $600-$300 USD.  This printer is supported
+	by the foo2zjs free software printer driver.
+    </en> </comments>
+</printer>
