@@ -1,13 +1,23 @@
 2003-03-06  Till Kamppeter <till.kamppeter@gmx.net>
 
+	* printer/Minolta-magicolor_2300_DL.xml: Added the Minolta/QMS
+	  magicolor 2300 DL.
+	
+	* printer/HP-LaserJet_1000.xml: Let "foo2zjs" be the recommended
+	  driver for the HP LaserJet 1000. Re-rated the printer to
+	  "Mostly".
+	
+	* driver/foo2zjs.xml, opt/foo2zjs-*.xml: Added "foo2zjs" driver
+	  for Zenographics-based printers.
+	
 	* printer/Epson-EPL-6100.xml, printer/Epson-EPL-6100L.xml,
 	  printer/Epson-EPL-6100PS.xml, printer/Epson-AcuLaser_C8600.xml
 	  printer/Epson-AcuLaser_C8600PS.xml, driver/epl6100.xml,
 	  driver/alc8600.xml, driver/pxlmono.xml, driver/Postscript.xml,
 	  driver/lj5gray.xml, driver/lj5mono.xml, driver/ljet4.xml,
 	  opt/2.xml, opt/6.xml, opt/145.xml, opt/159.xml, opt/160.xml,
-	  opt/eplXXXX-*.xml, pxlmono-GSResolution.xml: Added Epson laser
-	  printers.
+	  opt/eplXXXX-*.xml, pxlmono-GSResolution.xml,
+	  Postscript-Resolution.xml: Added Epson laser printers.
 	
 	* printer/312297.xml, printer/Epson-EPL-5800L.xml,
 	  printer/Epson-EPL-5900L.xml, driver/epl5?00l.xml,
